--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -61,12 +61,29 @@ body {
 }.wordWhenPlayerNotWin {
   color: black;
 }
+
+.rect-btn {
+  font-family: 'Amatic SC', cursive;
+  transition-duration: 0.7s;
+}
+.rect-btn_blue {
+  color: #FFF;
+  background: var(--color-blue);
+  border: 2px solid var(--color-blue);
+}
+.rect-btn_blue-inverted {
+  color: var(--color-blue);
+  background: #FFF;
+  border: 2px solid var(--color-blue);
+}
+
 #btnGenarateId {
   font-family: 'Amatic SC', cursive;
   z-index: 1;
   transition-duration: 0.7s;
   /* line-height: 35px; */
 }
+
 @media(min-width: 768px) {
   #btnGenarateId {
     position: absolute;
@@ -76,18 +93,16 @@ body {
     transform: translateX(-50%);
     margin: 0 auto;
     cursor: pointer;
-    background: #2196F3;
     padding: 6px 12px;
-    color: white;
     font-size: 26px;
-    border: none;
+    /* border: none; */
     border-radius: 35px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: none;
   }
   #btnGenarateId:hover {
-    background: #ffffff;
-    color: #2196F3;
-    box-shadow: 0 5px 20px rgb(33, 150, 243);
+    /* background: transparent;
+    color: var(--color-blue); */
+    box-shadow: 0 5px 20px rgba(33, 150, 243, 0.5);
   }
 }
 @media(max-width: 767px) {
@@ -95,7 +110,6 @@ body {
     position: absolute;
     border-radius: 10px;
     font-size: 26px;
-    border: 2px solid var(--color-blue);
     bottom: 10px;
     left: 10px;
     /* transform: scale(0.6); */
@@ -279,7 +293,7 @@ body {
   font-size: 22px;
   border: none;
   border-radius: 35px;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25); */
   transition-duration: 0.5s;
 }
 #newWordBtnWhenGameOver:hover, #newWordBtnWhenPlayerWin:hover {
